--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "start": "node server.cjs"
   },
   "dependencies": {
+    "@devexpress/analytics-core": "^24.1.4",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "devexpress-dashboard": "^24.1.4",
+    "devexpress-dashboard-react": "^24.1.4",
+    "devextreme": "^24.1.4",
+    "devextreme-react": "^24.1.4",
+    "express": "^4.17.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "express": "^4.17.1",
     "serve": "^14.1.2"
   },
   "devDependencies": {
